# WilsonRobot

./: .gitignore  pyproject.toml  scheme.drawio
config/: robot_dimensions.yaml
src/: kinematics.py  main.py  plot_joints.py  robot.py  tester.ipynb
src/robot_pkg/: package.xml  setup.py
src/robot_pkg/config/: robot_dimensions.yaml
src/robot_pkg/launch/: visualize.launch.py
src/robot_pkg/robot_pkg/: !Notes.txt  gait_controller_node.py  kinematics.py  mode_node.py  robot_config.py  servo_bridge.py  walk.py
src/robot_pkg/urdf/: leg_macro.xacro  wilson_robot.xacro
src/set_mode_interface/: CMakeLists.txt  package.xml
src/set_mode_interface/srv/: SetMode.srv
