[project]
name = "wilsonrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.31.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
